tela de usuario e inicio de tella de horarios de aula

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,9 @@
         <a mat-button routerLink="/usuarios" routerLinkActive="active"
             >Usuários</a
         >
-        <a mat-button href="#">Horários</a>
+        <a mat-button routerLink="/horarios" routerLinkActive="active"
+            >Horários</a
+        >
         <a mat-button href="#">Cursos</a>
         <a mat-button href="#">Salas</a>
     </div>
