feat: finalizacao componente de horarios de aula

--- a/src/app/horario/horario-modal/horario-modal.component.html
+++ b/src/app/horario/horario-modal/horario-modal.component.html
@@ -28,7 +28,7 @@
     </button>
     <button
         style="flex: 1; margin-left: 10px"
-        (click)="salvar()"
+        (click)="saveOrUpdateDecider()"
         mat-raised-button
         color="accent"
     >
