--- a/src/app/horario/horario.component.html
+++ b/src/app/horario/horario.component.html
@@ -1,25 +1,14 @@
 <div class="container-conteudo">
-    <mat-form-field appearance="standard">
-        <mat-label>Filtro</mat-label>
-        <input
-            matInput
-            style="color: white"
-            placeholder="Ex.: Maria da Silva"
-            #input
-        />
-        <!-- (keyup)="applyFilter($event)" -->
-    </mat-form-field>
-
     <table
         mat-table
         matSort
         matSortActive="nome"
         matSortDirection="asc"
         matSortDisableClear="true"
+        [dataSource]="dataSource"
         class="mat-elevation-z8"
     >
         <!-- (matSortChange)="setSort($event)" -->
-        <!-- [dataSource]="dataSource" -->
         <ng-container matColumnDef="nome">
             <th
                 mat-header-cell
@@ -32,31 +21,31 @@
             <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
         </ng-container>
 
-        <ng-container matColumnDef="email">
+        <ng-container matColumnDef="horarioInicio">
             <th
                 mat-header-cell
                 *matHeaderCellDef
                 style="width: 40%"
                 mat-sort-header
             >
-                Email
+                Horário de Início
             </th>
             <td mat-cell *matCellDef="let element">
-                {{ element.email }}
+                {{ element.horarioInicio }}
             </td>
         </ng-container>
 
-        <ng-container matColumnDef="isAdmin">
+        <ng-container matColumnDef="horarioFim">
             <th
                 mat-header-cell
                 *matHeaderCellDef
                 style="width: 15%"
                 mat-sort-header
             >
-                Permissão
+                Horário de Término
             </th>
             <td mat-cell *matCellDef="let element">
-                {{ element.isAdmin === false ? "Simples" : "Completo" }}
+                {{ element.horarioFim }}
             </td>
         </ng-container>
 
@@ -67,11 +56,14 @@
                     <mat-icon>more_vert</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
-                    <button mat-menu-item>
+                    <button
+                        (click)="consultarHorarioPorId(element.id)"
+                        mat-menu-item
+                    >
                         <mat-icon>edit</mat-icon>
                         <span>Editar</span>
                     </button>
-                    <button mat-menu-item>
+                    <button (click)="deletarHorario(element.id)" mat-menu-item>
                         <mat-icon>delete</mat-icon>
                         <span>Deletar</span>
                     </button>
@@ -84,16 +76,10 @@
             *matHeaderRowDef="displayedColumns; sticky: true"
         ></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-
-        <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">
-                Sem correspondência com "{{ input.value }}"
-            </td>
-        </tr>
     </table>
 
     <div class="botao-add">
-        <button (click)="openDialog()" mat-fab color="primary">
+        <button (click)="openDialog(null)" mat-fab color="primary">
             <mat-icon>add</mat-icon>
         </button>
     </div>
