--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,10 @@
         <a mat-button routerLink="/horarios" routerLinkActive="active"
             >Horários</a
         >
-        <a mat-button href="#">Cursos</a>
-        <a mat-button href="#">Salas</a>
+        <a mat-button routerLink="/cursos" routerLinkActive="active">Cursos</a>
+        <a mat-button routerLink="/atributos" routerLinkActive="active"
+            >Atributos</a
+        >
     </div>
 </mat-toolbar>
 
