--- a/src/app/curso/curso.component.html
+++ b/src/app/curso/curso.component.html
@@ -1,4 +1,15 @@
 <div class="container-conteudo">
+    <mat-form-field appearance="standard">
+        <mat-label>Filtro</mat-label>
+        <input
+            matInput
+            style="color: white"
+            (keyup)="applyFilter($event)"
+            placeholder="Ex.: Engenharia de Computação"
+            #input
+        />
+    </mat-form-field>
+
     <table
         mat-table
         matSort
@@ -9,60 +20,25 @@
         class="mat-elevation-z8"
     >
         <ng-container matColumnDef="nome">
-            <th
-                mat-header-cell
-                *matHeaderCellDef
-                style="width: 40%"
-                mat-sort-header
-            >
-                Nome
-            </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
             <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
         </ng-container>
 
-        <ng-container matColumnDef="horarioInicio">
-            <th
-                mat-header-cell
-                *matHeaderCellDef
-                style="width: 40%"
-                mat-sort-header
-            >
-                Horário de Início
-            </th>
-            <td mat-cell *matCellDef="let element">
-                {{ element.horarioInicio }}
-            </td>
-        </ng-container>
-
-        <ng-container matColumnDef="horarioFim">
-            <th
-                mat-header-cell
-                *matHeaderCellDef
-                style="width: 15%"
-                mat-sort-header
-            >
-                Horário de Término
-            </th>
-            <td mat-cell *matCellDef="let element">
-                {{ element.horarioFim }}
-            </td>
-        </ng-container>
-
         <ng-container matColumnDef="moreActions">
-            <th mat-header-cell *matHeaderCellDef style="width: 5%"></th>
+            <th mat-header-cell *matHeaderCellDef style="width: 1%"></th>
             <td mat-cell *matCellDef="let element">
                 <button mat-icon-button [matMenuTriggerFor]="menu">
                     <mat-icon>more_vert</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
                     <button
-                        (click)="consultarHorarioPorId(element.id)"
+                        (click)="consultarCursoPorId(element.id)"
                         mat-menu-item
                     >
                         <mat-icon>edit</mat-icon>
                         <span>Editar</span>
                     </button>
-                    <button (click)="deletarHorario(element.id)" mat-menu-item>
+                    <button (click)="deletarCurso(element.id)" mat-menu-item>
                         <mat-icon>delete</mat-icon>
                         <span>Deletar</span>
                     </button>
@@ -75,7 +51,16 @@
             *matHeaderRowDef="displayedColumns; sticky: true"
         ></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+        <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">
+                Sem correspondência com "{{ input.value }}"
+            </td>
+        </tr>
     </table>
+
+    <mat-paginator [pageSizeOptions]="[10, 20]" showFirstLastButtons>
+    </mat-paginator>
 
     <div class="botao-add">
         <button (click)="openDialog(null)" mat-fab color="primary">
