Criação de salas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,10 @@
         <a mat-button routerLink="/atributos" routerLinkActive="active"
             >Atributos</a
         >
+        <a mat-button routerLink="/grupo-salas" routerLinkActive="active"
+            >Agrupamento</a
+        >
+        <a mat-button routerLink="/salas" routerLinkActive="active">Salas</a>
     </div>
 </mat-toolbar>
 
