--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 $amarelo-utf: #fecc00;
 $roxo-primary: #7b1fa2;
 $cinza-primary: #303030;
+$cinza-secondary: #ffffffb3;
 $error: #f44336;
 $success: #69f0ae;
 
