fim do projeto - visual

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,9 @@
             >Agrupamento</a
         >
         <a mat-button routerLink="/salas" routerLinkActive="active">Salas</a>
+        <a mat-button routerLink="/blocos-aula" routerLinkActive="active"
+            >Aulas</a
+        >
     </div>
 </mat-toolbar>
 
