--- a/src/app/atributo/atributo.component.html
+++ b/src/app/atributo/atributo.component.html
@@ -1,6 +1,6 @@
 <div class="container-conteudo">
     <mat-form-field appearance="standard">
-        <mat-label>Filtro</mat-label>
+        <mat-label>Buscar atributo por nome</mat-label>
         <input
             matInput
             style="color: white"
