--- a/src/app/curso/curso-modal/curso-modal.component.html
+++ b/src/app/curso/curso-modal/curso-modal.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>Curso</h1>
-<mat-form-field appearance="fill">
+<mat-form-field appearance="outline">
     <mat-label>Nome</mat-label>
     <input
         matInput
@@ -8,6 +8,26 @@
         required
     />
 </mat-form-field>
+
+<div style="width: 100%">
+    <mat-form-field style="width: 100%" appearance="outline">
+        <mat-label>Responsáveis</mat-label>
+        <mat-select [formControl]="usuarios" multiple>
+            <mat-select-trigger>
+                <mat-chip-list>
+                    <mat-chip *ngFor="let usuario of usuarios.value">
+                        {{ usuario["nome"] }}
+                    </mat-chip>
+                </mat-chip-list>
+            </mat-select-trigger>
+            <mat-option
+                *ngFor="let usuario of listaUsuarios"
+                [value]="usuario"
+                >{{ usuario.nome }}</mat-option
+            >
+        </mat-select>
+    </mat-form-field>
+</div>
 
 <div style="display: flex; margin-top: 20px" class="botoes">
     <button style="flex: 1" color="warn" mat-raised-button mat-dialog-close>
