--- a/src/app/grupo-sala/grupo-sala-modal/grupo-sala-modal.component.html
+++ b/src/app/grupo-sala/grupo-sala-modal/grupo-sala-modal.component.html
@@ -1,12 +1,7 @@
-<h1 mat-dialog-title>Atributo de Sala</h1>
+<h1 mat-dialog-title>Agrupamento</h1>
 <mat-form-field appearance="fill">
     <mat-label>Nome</mat-label>
-    <input
-        matInput
-        [formControl]="nome"
-        placeholder="Microcontroladores"
-        required
-    />
+    <input matInput [formControl]="nome" placeholder="Bloco N" required />
 </mat-form-field>
 
 <div style="display: flex; margin-top: 20px" class="botoes">
