--- a/src/app/horario/horario.component.html
+++ b/src/app/horario/horario.component.html
@@ -2,7 +2,7 @@
     <table
         mat-table
         matSort
-        matSortActive="nome"
+        matSortActive="horarioInicio"
         matSortDirection="asc"
         matSortDisableClear="true"
         [dataSource]="dataSource"
