--- a/src/app/curso/curso.component.html
+++ b/src/app/curso/curso.component.html
@@ -1,6 +1,6 @@
 <div class="container-conteudo">
     <mat-form-field appearance="standard">
-        <mat-label>Filtro</mat-label>
+        <mat-label>Buscar curso por nome</mat-label>
         <input
             matInput
             style="color: white"
@@ -22,6 +22,26 @@
         <ng-container matColumnDef="nome">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
             <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="responsaveis">
+            <th
+                mat-header-cell
+                *matHeaderCellDef
+                mat-sort-header
+                style="width: 60%"
+            >
+                Responsáveis
+            </th>
+            <td mat-cell *matCellDef="let element">
+                <div class="resp-compactados">
+                    <mat-chip-list>
+                        <mat-chip *ngFor="let item of element.usuarios"
+                            >{{ item.nome }}
+                        </mat-chip>
+                    </mat-chip-list>
+                </div>
+            </td>
         </ng-container>
 
         <ng-container matColumnDef="moreActions">
