--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -104,3 +104,22 @@
         </button>
     </div>
 </div>
+
+<mat-form-field style="width: 200px; margin-left: 15px" appearance="fill">
+    <mat-label>Username</mat-label>
+    <input matInput placeholder="Username" [formControl]="username" required />
+</mat-form-field>
+<mat-form-field style="width: 200px; margin: auto 15px" appearance="fill">
+    <mat-label>Password</mat-label>
+    <input
+        matInput
+        placeholder="Password"
+        [type]="hide ? 'password' : 'text'"
+        [formControl]="password"
+        required
+    />
+    <mat-icon matSuffix (click)="hide = !hide">{{
+        hide ? "visibility_off" : "visibility"
+    }}</mat-icon>
+</mat-form-field>
+<button (click)="teste()">Login</button>
