feat: add campo username ao usuario

--- a/src/app/usuario/create/create-usuario.component.html
+++ b/src/app/usuario/create/create-usuario.component.html
@@ -5,6 +5,11 @@
 </mat-form-field>
 
 <mat-form-field appearance="fill">
+    <mat-label>Username</mat-label>
+    <input matInput placeholder="jsilva" [formControl]="username" required />
+</mat-form-field>
+
+<mat-form-field appearance="fill">
     <mat-label>Email</mat-label>
     <input
         matInput
