--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -24,7 +24,7 @@
             <th
                 mat-header-cell
                 *matHeaderCellDef
-                style="width: 40%"
+                style="width: 30%"
                 mat-sort-header
             >
                 Nome
@@ -32,11 +32,25 @@
             <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
         </ng-container>
 
+        <ng-container matColumnDef="username">
+            <th
+                mat-header-cell
+                *matHeaderCellDef
+                style="width: 30%"
+                mat-sort-header
+            >
+                Username
+            </th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.username }}
+            </td>
+        </ng-container>
+
         <ng-container matColumnDef="email">
             <th
                 mat-header-cell
                 *matHeaderCellDef
-                style="width: 40%"
+                style="width: 30%"
                 mat-sort-header
             >
                 Email
@@ -50,7 +64,7 @@
             <th
                 mat-header-cell
                 *matHeaderCellDef
-                style="width: 15%"
+                style="width: 10%"
                 mat-sort-header
             >
                 Permissão
