--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,62 @@
+<!-- <span style="margin-left: 50px">TCC Pipa</span> -->
 <mat-toolbar color="primary">
-    <!-- <span style="margin-left: 50px">TCC Pipa</span> -->
-    <!-- <img src="../assets/images/utf.png" alt="Logo Universidade" /> -->
-    <div class="container-header">
-        <a mat-button routerLink="/usuarios" routerLinkActive="active"
+    <div class="container-header container-conteudo" style="display: flex">
+        <img src="../assets/images/utf.png" alt="Logo Universidade" />
+        <a
+            *ngIf="usuarioSimplificado && usuarioSimplificado?.isAdmin"
+            mat-button
+            routerLink="/usuarios"
+            routerLinkActive="active"
             >Usuários</a
         >
-        <a mat-button routerLink="/horarios" routerLinkActive="active"
+        <a
+            *ngIf="usuarioSimplificado && usuarioSimplificado?.isAdmin"
+            mat-button
+            routerLink="/horarios"
+            routerLinkActive="active"
             >Horários</a
         >
-        <a mat-button routerLink="/cursos" routerLinkActive="active">Cursos</a>
-        <a mat-button routerLink="/atributos" routerLinkActive="active"
+        <a
+            *ngIf="usuarioSimplificado && usuarioSimplificado?.isAdmin"
+            mat-button
+            routerLink="/cursos"
+            routerLinkActive="active"
+            >Cursos</a
+        >
+        <a
+            *ngIf="usuarioSimplificado && usuarioSimplificado?.isAdmin"
+            mat-button
+            routerLink="/atributos"
+            routerLinkActive="active"
             >Atributos</a
         >
-        <a mat-button routerLink="/grupo-salas" routerLinkActive="active"
+        <a
+            *ngIf="usuarioSimplificado && usuarioSimplificado?.isAdmin"
+            mat-button
+            routerLink="/grupo-salas"
+            routerLinkActive="active"
             >Agrupamento</a
         >
-        <a mat-button routerLink="/salas" routerLinkActive="active">Salas</a>
-        <a mat-button routerLink="/blocos-aula" routerLinkActive="active"
+        <a
+            *ngIf="usuarioSimplificado && usuarioSimplificado?.isAdmin"
+            mat-button
+            routerLink="/salas"
+            routerLinkActive="active"
+            >Salas</a
+        >
+        <a
+            *ngIf="usuarioSimplificado"
+            mat-button
+            routerLink="/blocos-aula"
+            routerLinkActive="active"
             >Aulas</a
         >
+        <div
+            *ngIf="usuarioSimplificado"
+            style="margin: auto 0 auto auto; text-align: right"
+        >
+            <p style="margin: auto">Olá, {{ usuarioSimplificado.username }}</p>
+        </div>
     </div>
 </mat-toolbar>
 
