--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,8 +5,8 @@
 }
 
 .mat-toolbar img {
-    margin-left: 120px;
     height: 60px;
+    margin-right: 20px;
 }
 
 .mat-button {
@@ -25,7 +25,6 @@
     display: inline-block;
     margin-right: 20px;
     font-size: 20px;
-    text-transform: uppercase;
     text-align: center;
 }
 
