--- a/src/app/sala/sala.component.scss
+++ b/src/app/sala/sala.component.scss
@@ -15,7 +15,7 @@ table {
 // }
 
 .mat-row:nth-child(even) {
-    background-color: $roxo-primary;
+    background-color: $cinza-primary;
 }
 
 .botao-add {
