--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,4 @@
-$amarelo-utf: #fecc00;
-$roxo-primary: #7b1fa2;
+$primary: #fecc00;
 $cinza-primary: #303030;
 $cinza-secondary: #ffffffb3;
 $error: #f44336;
