--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,7 +13,7 @@
     padding: 10px;
 }
 
-.active {
+.rotas .active {
     background-color: rgba($color: #000000, $alpha: 0.2);
 }
 
@@ -28,6 +28,6 @@
     text-align: center;
 }
 
-.container-header a:hover {
-    color: $cinza-primary;
+.container-header .rotas a:hover {
+    color: white;
 }
