--- a/src/app/bloco-aula/bloco-aula.component.scss
+++ b/src/app/bloco-aula/bloco-aula.component.scss
@@ -1,4 +1,5 @@
 @import "src/styles";
+@import "src/theme";
 
 table {
     width: 100%;
@@ -10,7 +11,7 @@ table {
 }
 
 .mat-row:nth-child(even) {
-    background-color: $roxo-primary;
+    background-color: $cinza-primary;
 }
 
 .botao-add {
