--- a/src/app/grupo-sala/grupo-sala.component.scss
+++ b/src/app/grupo-sala/grupo-sala.component.scss
@@ -10,7 +10,7 @@ table {
 }
 
 .mat-row:nth-child(odd) {
-    background-color: $roxo-primary;
+    background-color: $cinza-primary;
 }
 
 .botao-add {
