--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,14 +11,17 @@
 
 .mat-button {
     padding: 10px;
+    vertical-align: text-top;
 }
 
-.rotas .active {
+.rotas .active,
+.usuario-loggado {
     background-color: rgba($color: #000000, $alpha: 0.2);
 }
 
 .container-header {
     margin: auto;
+    height: inherit;
 }
 
 .container-header a {
@@ -30,4 +33,13 @@
 
 .container-header .rotas a:hover {
     color: white;
+}
+
+.usuario-loggado {
+    padding: 10px;
+    border-radius: 25px;
+}
+
+.usuario-loggado:hover {
+    cursor: pointer;
 }
