--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,5 +24,5 @@
     </div>
 </mat-toolbar> -->
 <h1 style="color: white; display: flex; justify-content: center">
-    home works!
+    Vai ter home?
 </h1>
