--- a/src/app/bloco-aula/bloco-aula.component.html
+++ b/src/app/bloco-aula/bloco-aula.component.html
@@ -1,6 +1,6 @@
 <div class="container-conteudo">
     <mat-form-field appearance="standard">
-        <mat-label>Buscar disciplina por nome</mat-label>
+        <mat-label>Buscar disciplina por código</mat-label>
         <input
             matInput
             style="color: white"
@@ -346,7 +346,10 @@
         ></tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[10, 20]" showFirstLastButtons>
+    <mat-paginator
+        [pageSizeOptions]="[10, 20, dataSource.data.length]"
+        showFirstLastButtons
+    >
     </mat-paginator>
 
     <div class="botao-add">
