--- a/src/app/heat-map/heat-map.component.html
+++ b/src/app/heat-map/heat-map.component.html
@@ -1,4 +1,35 @@
 <div class="container-conteudo">
+    <div
+        class="container-filtro"
+        style="display: flex; justify-content: space-between"
+    >
+        <div class="filtro-atributo" style="width: 70%">
+            <mat-form-field style="width: 90%" appearance="outline">
+                <mat-label>Atributos</mat-label>
+                <mat-select [formControl]="filtroAtributos" multiple>
+                    <mat-select-trigger>
+                        <mat-chip-list>
+                            <mat-chip
+                                *ngFor="let atributo of filtroAtributos.value"
+                            >
+                                {{ atributo["nome"] }}
+                            </mat-chip>
+                        </mat-chip-list>
+                    </mat-select-trigger>
+                    <mat-option
+                        *ngFor="let atributo of listaAtributos"
+                        [value]="atributo"
+                        >{{ atributo.nome }}</mat-option
+                    >
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <div class="filtro-button">
+            <button (click)="filtrar()" mat-raised-button color="primary">
+                Filtrar
+            </button>
+        </div>
+    </div>
     <table
         mat-table
         matSort
@@ -12,7 +43,11 @@
                 mat-header-cell
                 *matHeaderCellDef
             ></th>
-            <td style="text-align: left" mat-cell *matCellDef="let element">
+            <td
+                style="text-align: center; padding-left: 0"
+                mat-cell
+                *matCellDef="let element"
+            >
                 {{ element.nomeHorario }}
             </td>
         </ng-container>
@@ -25,7 +60,16 @@
             >
                 Segunda
             </th>
-            <td style="text-align: center" mat-cell *matCellDef="let element">
+            <td
+                [ngStyle]="{
+                    'background-color': getColorFromRange(
+                        element.listaDetalhes[1].contagem
+                    )
+                }"
+                style="text-align: center; color: black"
+                mat-cell
+                *matCellDef="let element"
+            >
                 {{ element.listaDetalhes[1].contagem }}
             </td>
         </ng-container>
@@ -38,7 +82,16 @@
             >
                 Terça
             </th>
-            <td style="text-align: center" mat-cell *matCellDef="let element">
+            <td
+                [ngStyle]="{
+                    'background-color': getColorFromRange(
+                        element.listaDetalhes[2].contagem
+                    )
+                }"
+                style="text-align: center; color: black"
+                mat-cell
+                *matCellDef="let element"
+            >
                 {{ element.listaDetalhes[2].contagem }}
             </td>
         </ng-container>
@@ -51,7 +104,16 @@
             >
                 Quarta
             </th>
-            <td style="text-align: center" mat-cell *matCellDef="let element">
+            <td
+                [ngStyle]="{
+                    'background-color': getColorFromRange(
+                        element.listaDetalhes[3].contagem
+                    )
+                }"
+                style="text-align: center; color: black"
+                mat-cell
+                *matCellDef="let element"
+            >
                 {{ element.listaDetalhes[3].contagem }}
             </td>
         </ng-container>
@@ -64,33 +126,72 @@
             >
                 Quinta
             </th>
-            <td style="text-align: center" mat-cell *matCellDef="let element">
+            <td
+                [ngStyle]="{
+                    'background-color': getColorFromRange(
+                        element.listaDetalhes[4].contagem
+                    )
+                }"
+                style="text-align: center; color: black"
+                mat-cell
+                *matCellDef="let element"
+            >
                 {{ element.listaDetalhes[4].contagem }}
             </td>
         </ng-container>
 
         <ng-container matColumnDef="sexta">
             <th
-                style="width: 15%; text-align: center; padding-right: 0"
+                style="
+                    width: 15%;
+                    text-align: center;
+                    padding-right: 0;
+                    border-right: 0;
+                "
                 mat-header-cell
                 *matHeaderCellDef
             >
                 Sexta
             </th>
             <td
-                style="text-align: center; padding-right: 0"
+                [ngStyle]="{
+                    'background-color': getColorFromRange(
+                        element.listaDetalhes[5].contagem
+                    )
+                }"
+                style="
+                    text-align: center;
+                    padding-right: 0;
+                    color: black;
+                    border-right: 0;
+                "
                 mat-cell
                 *matCellDef="let element"
             >
                 {{ element.listaDetalhes[5].contagem }}
             </td>
         </ng-container>
+        <!-- <ng-container matColumnDef="media">
+            <th
+                style="width: 15%; text-align: center; padding-right: 0"
+                mat-header-cell
+                *matHeaderCellDef
+            >
+                Média
+            </th>
+            <td
+                style="text-align: center; padding-right: 0"
+                mat-cell
+                *matCellDef="let element"
+            >
+                {{ element.media }}
+            </td>
+        </ng-container> -->
 
         <tr
             mat-header-row
             *matHeaderRowDef="displayedColumns; sticky: true"
         ></tr>
-        <tr></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
 </div>
