--- a/src/app/heat-map/heat-map.component.html
+++ b/src/app/heat-map/heat-map.component.html
@@ -6,8 +6,8 @@
         <div class="filtro-atributo" style="width: 50%">
             <mat-form-field style="width: 90%" appearance="outline">
                 <mat-label>Atributos</mat-label>
-                <mat-select [formControl]="filtroAtributos" multiple>
-                    <mat-select-trigger>
+                <mat-select [formControl]="filtroAtributos">
+                    <!-- <mat-select-trigger>
                         <mat-chip-list>
                             <mat-chip
                                 *ngFor="let atributo of filtroAtributos.value"
@@ -15,7 +15,7 @@
                                 {{ atributo["nome"] }}
                             </mat-chip>
                         </mat-chip-list>
-                    </mat-select-trigger>
+                    </mat-select-trigger> -->
                     <mat-option
                         *ngFor="let atributo of listaAtributos"
                         [value]="atributo"
