feat: opcao desmarcar em select unico

--- a/src/app/bloco-aula/bloco-aula.component.html
+++ b/src/app/bloco-aula/bloco-aula.component.html
@@ -14,6 +14,7 @@
             <mat-form-field appearance="outline">
                 <mat-label>Dia da semana</mat-label>
                 <mat-select [formControl]="filtroDiaSemana">
+                    <mat-option>--</mat-option>
                     <!-- <mat-select-trigger>
                         <mat-chip-list>
                             <mat-chip *ngFor="let dia of filtroDiaSemana.value">
