--- a/src/app/heat-map/heat-map.component.html
+++ b/src/app/heat-map/heat-map.component.html
@@ -7,6 +7,7 @@
             <mat-form-field style="width: 90%" appearance="outline">
                 <mat-label>Atributos</mat-label>
                 <mat-select [formControl]="filtroAtributos">
+                    <mat-option>--</mat-option>
                     <!-- <mat-select-trigger>
                         <mat-chip-list>
                             <mat-chip
